# BadgeIt

./: .gitignore  README.md
.github/workflows/: build.yml  deploy.yml
.kiro/steering/: project-context.md
backend/: Cargo.toml
backend/src/: auth.rs  error.rs  lib.rs  main.rs  models.rs  og.rs  og_image.rs  profile_id.rs  router.rs  store.rs
docs/: runbook.md
docs/adr/: 000-template.md  001-serverless-only.md  002-rust-backend.md  003-cdk-typescript-infra.md  004-testing-zero-tolerance.md  005-single-cloudfront-distribution.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: config.json
frontend/src/: App.test.tsx  index.css  main.tsx  router.tsx
frontend/src/auth/: authContext.ts  config.ts  context.test.tsx  context.tsx  index.ts  service.test.ts  service.ts  useAuth.ts  webauthn.ts
frontend/src/components/: CardView.test.tsx  CardView.tsx  ColorSchemeToggle.tsx  CustomThemeModal.test.tsx  CustomThemeModal.tsx  DownloadDropdown.test.tsx  DownloadDropdown.tsx  EditConnectionModal.tsx  HeaderMenu.tsx  LazyLoadErrorBoundary.test.tsx  LazyLoadErrorBoundary.tsx  ManagePasskeysModal.tsx  Print3DModal.test.tsx  Print3DModal.tsx  Print3DPreview.test.tsx  Print3DPreview.tsx  QRModal.test.tsx  QRModal.tsx  RotatingTagline.tsx  SaveConnectionModal.test.tsx  SaveConnectionModal.tsx  SocialIcons.tsx
frontend/src/config/: runtimeConfig.ts
frontend/src/constants/: socialPlatforms.ts  taglines.ts  themes.test.ts  themes.ts
frontend/src/hooks/: useColorScheme.ts  useOverlayClose.test.tsx  useOverlayClose.ts
frontend/src/lib/: qr3mf.test.ts  qr3mf.ts  vcard.test.ts  vcard.ts  vcardImport.test.ts  vcardImport.ts
frontend/src/mocks/: handlers.test.ts  handlers.ts  install.test.ts  install.ts  profiles.ts  webauthn.ts
frontend/src/pages/: AboutPage.test.tsx  AboutPage.tsx  ConnectionsPage.test.tsx  ConnectionsPage.tsx  EditProfilePage.test.tsx  (+5 more)
infra/: .gitignore  cdk.json  jest.config.ts  package-lock.json  package.json  tsconfig.json
infra/lib/: api-stack.ts  auth-stack.ts  data-stack.ts  frontend-stack.ts  monitoring-stack.ts  waf-stack.ts
infra/test/: api-stack.test.ts  auth-stack.test.ts  data-stack.test.ts  frontend-stack.test.ts
utilities/: generate_og_image.py
(+5 files in other folders)
