[package]
name = "badgeit-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = "0.15"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
jsonwebtoken = "9"
lambda_runtime = "0.13"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "pre_sign_up"
path = "src/bin/pre_sign_up.rs"
