[package]
name = "badgeit-backend"
version = "0.1.0"
edition = "2024"

[lints.rust]
# The zig linker used for cross-compiling Lambda targets emits a benign
# "ignoring deprecated linker optimization setting '1'" notice on stderr;
# rustc's linker-messages lint (warn-by-default since 1.9x) surfaces it as
# a build warning even though the link succeeds and nothing is actually lost.
linker_messages = "allow"

[dependencies]
aws_lambda_events = "0.15"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
jsonwebtoken = "9"
lambda_runtime = "0.13"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
imageproc = "0.27.0"
ab_glyph = "0.2.32"

[dev-dependencies]

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"
